// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.34
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiply expense 1`] = `
<div>
  <h1>
    Viewing 
    42
     
    expenses
     totalling 
    $234,546,567,890.97
  </h1>
</div>
`;
